[Update] Added a link to /teach/create - app/views/chat/index.html.erb.
Added the app's sample images - lib/assets/images.

--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -3,6 +3,8 @@
 <p>You can teach Chat Learner how to talk to you.</p>
 <p>Enjoy your conversation with Chat Learner!</p>
 
+<a href='/chat/teach'>Teach Chat Learner</a>
+
 <form action='/chat/create'>
 	<input type='text' name='content'/>
 	<button type='submit'>Chat</button>
